# wolf_aliengo_interface

./: CMakeLists.txt  README.md  package.xml
aliengo_hal/: CMakeLists.txt  README.md
aliengo_hal/cmake/: aliengohalConfig.cmake.in
aliengo_hal/include/aliengo_hal/: aliengo_hal.h
aliengo_hal/src/: aliengo_hal.cpp  python_interface.cpp
aliengo_hal/test/: test_aliengo_hal.cpp
include/wb_aliengo_interface/: aliengo_robot_hw.hpp  aliengo_ros_control.hpp  aliengo_rostask.hpp
include/wolf_aliengo_interface/: aliengo_robot_hw.hpp  aliengo_ros_control.hpp
src/: aliengo_robot_hw.cpp  aliengo_ros_control.cpp  aliengo_ros_node.cpp
