<?xml version="1.0"?>
<package format="2">
  <name>wb_aliengo_interface</name>
  <version>0.0.0</version>
  <description>
      The wb_aliengo_interface package
  </description>
  <maintainer email="gennaro.raiola@gmail.com">graiola</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>realtime_tools</depend>
  <depend>controller_manager</depend>
  <depend>wb_hardware_interface</depend>

  <test_depend>rostest</test_depend>

</package>
